--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       });
       setInterval(() => {
         el.value = '';
-
-      }, 1)
+        el.focus();
+      }, 1);
     </script>
   </body>
 </html>
