--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
   </head>
   <body>
     <article>
-      <input id="live" />
+      <input id="room" placeholder="Room number" />
+      <input id="live" placeholder="Barcode (automatically empties)" />
     </article>
     <script>
+      const room = document.getElementById('room');
+      room.value = localStorage.get('room') || '';
       const el = document.getElementById('live');
       const cache = new Set();
       let timeout = null;
+      room.addEventListener('input', () => {
+        localStorage.setItem('room', room.value);
+      });
       el.addEventListener('input', () => {
         const barcode = el.value;
-        if (!barcode) return;
+        if (!barcode || barcode.length !== 8) return;
         if (cache.has(barcode)) return;
         if (timeout) clearTimeout(timeout);
         timeout = setTimeout(() => {
@@ -31,7 +37,7 @@
           iframe.style.width = '1px';
           iframe.style.height = '1px';
           document.body.appendChild(iframe);
-          iframe.src = `https://docs.google.com/forms/d/e/1FAIpQLSeEao2Zx2YnwVpJ3I51yWsZrwAdoY-oveur_KtbdxVfJdnikw/formResponse?entry.1389400341=${barcode}`;
+          iframe.src = `https://docs.google.com/forms/d/e/1FAIpQLSeEao2Zx2YnwVpJ3I51yWsZrwAdoY-oveur_KtbdxVfJdnikw/formResponse?entry.1389400341=${barcode}&entry.1959889881=${room.value}`;
           setTimeout(() => {
             iframe.remove();
           }, 60000);
